+ fitur tambahkan event, kompetisi, dan sewa

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.yabz.bayu_1202154127_modul6"
+        applicationId "com.example.rpl.hobi_kita_rev"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
