--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,7 +37,9 @@
         </activity>
         <activity android:name=".Login"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Tambah_Foto" />
+        <activity
+            android:name=".Tambah_Foto"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Daftar"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
